# ChangeLog for www-apps/drupal
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/drupal/ChangeLog,v 1.36 2007/07/28 12:26:23 uberlord Exp $

*drupal-5.2 (28 Jul 2007)

  28 Jul 2007; Roy Marples <uberlord@gentoo.org> +drupal-5.2.ebuild:
  Bump, #186884 thanks to Pierre-Yves Rofes.

  19 Mar 2007; Luca Barbato <lu_zero@gentoo.org> drupal-5.1.ebuild:
  protect .htaccess

*drupal-5.1 (21 Feb 2007)

  21 Feb 2007; Roy Marples <uberlord@gentoo.org> +drupal-5.1.ebuild:
  Bump

*drupal-5.0 (18 Jan 2007)

  18 Jan 2007; Roy Marples <uberlord@gentoo.org> +drupal-5.0.ebuild:
  New release, fixes #162489.

*drupal-4.7.5 (06 Jan 2007)

  06 Jan 2007; Roy Marples <uberlord@gentoo.org> +drupal-4.7.5.ebuild:
  New release, #160375 thanks to Executioner.

  03 Jan 2007; Roy Marples <uberlord@gentoo.org> drupal-4.7.4.ebuild:
  Don't pull in any databases ourselves, #159781.

*drupal-4.7.4 (28 Nov 2006)

  28 Nov 2006; Roy Marples <uberlord@gentoo.org> +drupal-4.7.4.ebuild:
  New version, addresses some security issues, #151993.
  We no longer install any 3rd party modules, #98524.

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> drupal-4.5.7.ebuild,
  drupal-4.5.8.ebuild, drupal-4.6.2.ebuild, drupal-4.6.3.ebuild,
  drupal-4.6.5.ebuild, drupal-4.6.6.ebuild, drupal-4.6.8.ebuild,
  drupal-4.6.9.ebuild, drupal-4.7.0.ebuild, drupal-4.7.2.ebuild,
  drupal-4.7.3.ebuild:
  dev-db/mysql => virtual/mysql

  28 Oct 2006; Sven Wegener <swegener@gentoo.org> drupal-4.5.7.ebuild,
  drupal-4.5.8.ebuild, drupal-4.6.2.ebuild, drupal-4.6.3.ebuild,
  drupal-4.6.5.ebuild, drupal-4.6.6.ebuild, drupal-4.6.8.ebuild,
  drupal-4.6.9.ebuild, drupal-4.7.0.ebuild, drupal-4.7.2.ebuild,
  drupal-4.7.3.ebuild:
  Use emerge --config instead of ebuild config.

*drupal-4.7.3 (21 Aug 2006)
*drupal-4.6.9 (21 Aug 2006)

  21 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  +drupal-4.6.9.ebuild, +drupal-4.7.3.ebuild:
  Security bump, bug #142774
