@@ -1,0 +1,3 @@
+MD5 21979a64f1ea2ffffac688811d342771 drupal-5.3.tar.gz 753427
+RMD160 d6eaa0a3ebe860857a9f212302206db967e2478a drupal-5.3.tar.gz 753427
+SHA256 27ec97477fbf533dbd875604816a560cf38328f3f0df4e3bbb0d61f5f1ac3a40 drupal-5.3.tar.gz 753427
