@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/drupal
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/drupal/ChangeLog,v 1.36 2007/07/28 12:26:23 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/drupal/ChangeLog,v 1.37 2007/10/18 06:30:12 uberlord Exp $
+
+*drupal-5.3 (18 Oct 2007)
+
+  18 Oct 2007; Roy Marples <uberlord@gentoo.org> +drupal-5.3.ebuild:
+  Bump, #196116.
 
 *drupal-5.2 (28 Jul 2007)
 
